# structural-computing

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
book/: 00-preface.md  01-the-100k-line-problem.md  01a-the-business-case-in-one-page.md  02-the-sql-story-retold.md  03-the-paradigm-in-one-paragraph.md  04-when-it-applies.md  05-five-patterns-that-fit.md  06-admissible-sets.md  07-the-classifier.md  08-honest-stops.md  09-network-reliability.md  10-schedule-optimisation.md  11-cpsat-preflight.md  12-reading-the-answer.md  13-wiring-it-in.md  14-when-to-use-what.md  15-three-industries.md  16-where-this-goes.md  17-becoming-a-practitioner.md
book/examples/09_network_reliability/: README.md  simple_grid.py
book/examples/10_schedule_optimisation/: README.md  or_scheduling.py
book/examples/11_cpsat_preflight/: README.md  cardinality_rewrite.py
calibration_data/: default.py
docs/: README.md  STABILITY.md  architecture.md  book.md  v0.10-plan.md  v0.11-plan.md  v0.12-plan.md  v0.13-plan.md  v0.4-plan.md  v0.5-plan.md  v0.6-plan.md  v0.7-plan.md  v0.8-plan.md  v0.9-plan.md  v1.0-plan.md  v1.1-plan.md
docs/explanation/: tropical.md
docs/how-to/: cpsat-preflight.md  min-cost-scheduling.md
docs/reference/: api.md
docs/tutorial/: getting-started.md
examples/: 01_count_matchings.py  02_rare_tail_probability.py  03_compare_configurations.py  04_orchestrator_dispatch.py  05_hybrid_decomposition.py  06_signature_classification.py  07_treewidth_bounded_dp.py  08_rationalise_weighted_matching.py  09_holographic_basis_unlock.py  10_crossing_elimination_k4.py  11_high_degree_vertex_split.py  12_discover_holographic_basis.py  13_general_holographic_transform.py  README.md
structural_computing/: __init__.py  calibration.py  classify.py  compose.py  decompose.py  easy.py  orchestrator.py  pipeline_router.py  replay.py  route.py  trace.py  transform.py  verifier.py
tests/: test_calibration.py  test_classify.py  test_compose.py  test_constraints.py  test_decompose.py  test_orchestrator.py  test_pipeline_router.py  test_replay.py  test_route.py  test_smoke.py  test_trace.py  test_transform.py  test_verifier.py
tests/originality/: test_basis_aware_rank.py  test_dart_chain.py
