[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-computing"
version = "0.6.0a1"
description = "Declarative structural computation: exact polynomial-time answers to combinatorial questions on structured graphs, with automatic routing to the cheapest correct evaluator."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Edward Chalk (sapientronic.ai)" },
]
keywords = [
    "structural-computing",
    "exact-counting",
    "perfect-matchings",
    "holant",
    "matchgate",
    "pfaffian",
    "fkt",
    "kasteleyn",
    "graph-algorithms",
    "reliability-analysis",
    "rare-tail-probability",
    "workflow-routing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "holant-tools>=0.6.1",
    "numpy>=1.24",
    "sympy>=1.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/pcoz/structural-computing"
Documentation = "https://github.com/pcoz/free-fermion-quantum-simulation/tree/main/docs"
Repository = "https://github.com/pcoz/structural-computing"
"Worked examples" = "https://github.com/pcoz/free-fermion-quantum-simulation"
"Mathematical engine (holant-tools)" = "https://github.com/pcoz/holant-tools"
Changelog = "https://github.com/pcoz/structural-computing/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["structural_computing*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
